Criando o header e a responsividade dele.

--- a/FLEX/index.htm
+++ b/FLEX/index.htm
@@ -5,22 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500&display=swap" rel="stylesheet">
     <title>FLEXBOX</title>
 </head>
 
 <body>
-    <section class="flex-container">
-        <div class="flex-item"></div>
-        <div class="flex-item"></div>
-        <div class="flex-item"></div>
-        <div class="flex-item"></div>
-        <div class="flex-item"></div>
-        <div class="flex-item"></div>
-        <div class="flex-item"></div>
-        <div class="flex-item"></div>
-        <div class="flex-item"></div>
-        <div class="flex-item"></div>
-    </section>
+    <header>
+        <h2><a href="#">THIRTEEN</a></h2>
+        <nav>
+            <li><a href="#">home</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">work</a></li>
+            <li><a href="#">contact</a></li>
+        </nav>
+    </header>
+    <!-- <section class="banner-area">
+        <div class="banner-ing"></div>
+        <h1>FLEXBOX</h1>
+        <h2>Responsividade</h2>
+        <a href="#" class="banner-btn">Contate-nos</a>
+    </section> -->
 </body>
 
 </html>
